# gtk_music_player

./: Cargo.toml  README.md
src/: main.rs  playlist.rs  toolbar.rs
