[package]
name = "music_player_gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gio = "^0.3.0"
gtk = "^0.3.0"
# gio = "0.15.0"
# gtk = "0.15.5"
gdk-pixbuf = "^0.3.0"
id3 = "^0.2.0"
# Opening MP3 files
gtk-sys = "^0.5.0"
# Decoding MP3 files
crossbeam = "0.8.1"
pulse-simple = "^1.0.0"
simplemad = "0.9.0"